changed android settings

--- a/stats.html
+++ b/stats.html
@@ -89,7 +89,8 @@ img, audio, video, canvas { max-width: 100%; }
             padding: 0;
             margin: 0;
             position: relative;
-            overflow: hidden;
+            overflow-y: hidden;
+            overflow-x: scroll;
         }
 
         #debug {
