--- a/stats.html
+++ b/stats.html
@@ -4,8 +4,8 @@
 <head>
     <title>Hammer.js</title>
     <link href="bootstrap.css" rel="stylesheet">
-<script src="d3.js"></script>
-<script src="sessionStats.js"></script>
+    <script src="d3.js"></script>
+    <script src="/Documents/sessionStats.js"></script>
 
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <style>
