--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@
     <title>Hammer.js</title>
     <link href="bootstrap.css" rel="stylesheet">
     <script src="d3.js"></script>
-    <script src="/Documents/sessionStats.js"></script>
+    <script src="/AppData/Documents/sessionStats.js"></script>
 
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <style>
