changed walkthrough size config

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ img, audio, video, canvas { max-width: 100%; }
         }
 
         .pane h1 {
-            font-size: 1.4em;
+            font-size: 2.8ex;
             padding-bottom: 7%;
             margin: 20px 0px;
             font-weight: 700;
@@ -125,13 +125,13 @@ img, audio, video, canvas { max-width: 100%; }
 
         }
         .pane h3 {
-            font-size: 1.1em;
+            font-size: 2.2ex;
                 position: absolute;
                 text-align: center;
             width: 100%;
             bottom: 1%;
             color: #CACACA;
-            line-height: 1.2em;
+            line-height: 2.4ex;
             font-family: "Montserrat-Regular";
 
         }
