--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ img, audio, video, canvas { max-width: 100%; }
         }
 
         .pane h1 {
-            font-size: 2.8ex;
+            font-size: 7vw;
             padding-bottom: 7%;
             margin: 20px 0px;
             font-weight: 700;
-            line-height: 1.3em;
+            line-height: 8vw;
             width: 100%;
             margin: 0 auto;
             position: absolute;
@@ -125,13 +125,13 @@ img, audio, video, canvas { max-width: 100%; }
 
         }
         .pane h3 {
-            font-size: 2.2ex;
+            font-size: 4vw;
                 position: absolute;
                 text-align: center;
             width: 100%;
             bottom: 1%;
             color: #CACACA;
-            line-height: 2.4ex;
+            line-height: 4vw;
             font-family: "Montserrat-Regular";
 
         }
