4th try4wt. fixed home screen transitio

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ left: 10%;
             </li>
             <li class="pane pane2">
                 <div class="data-square">
-                    <h1 class="top-header">When Bouncy<br />turns green,</h1>
+                    <h1 class="top-header">When Bouncy turns green,</h1>
                     <h1 class="bottom-header">click him as<br />fast as you can.</h1>
                     <h3>Bouncy don't like waiting.</h3>
                 </div>                
@@ -586,36 +586,36 @@ left: 10%;
             </li>
             <li class="pane pane3">
                 <div class="data-square">
-                    <h1 class="top-header">If you hit Bouncy<br />before he's green,</h1>
-                    <h1 class="bottom-header">he gets all<br />red and cranky.</h1>
+                    <h1 class="top-header">If you hit Bouncy before he's green,</h1>
+                    <h1 class="bottom-header">he gets all red and cranky.</h1>
                     <h3>So don't do that.</h3>
                 </div>                
             </li>
             <li class="pane pane4">
                 <div class="data-square">
-                    <h1 class="top-header">Bouncy is smarter<br />with Jawbone's UP.</h1>
+                    <h1 class="top-header">Bouncy is smarter with Jawbone's UP.</h1>
                     <div class="ball-partner" id="up-band"><img src="up-band.png" /></div>
-                    <h1 class="bottom-header">He knows sleep affects<br />your mental acuity.</h1>
+                    <h1 class="bottom-header">He knows sleep affects your mental acuity.</h1>
                     <h3>Get it? Acute ball? Acuity? Ha.</h3>
                 </div>                
             </li>
             <li class="pane pane5">
                 <div class="data-square">
-                    <h1 class="top-header">Tell Bouncy how you<br />feel before you play.</h1>
+                    <h1 class="top-header">Tell Bouncy how you feel before you play.</h1>
                     <!--<h1 class="bottom-header">Bouncy is a<br />good listener.</h1>-->
-                    <h3>Don't get too personal though.<br />Bouncy doesn't care that much.</h3>
+                    <h3>Don't get too personal though. Bouncy doesn't care that much.</h3>
                 </div>                
             </li>
             <li class="pane pane6">
                 <div class="data-square">
-                    <h1 class="top-header">Were you on the<br />ball today?</h1>
+                    <h1 class="top-header">Were you on the ball today?</h1>
 <!--                     <h1 class="bottom-header">Bouncy tells you.</h1>
- -->                    <h3>How'd you do against<br />other people? Against yourself<br />when you were happier?</h3>
+ -->                    <h3>How'd you do against other people? Against yourself when you were happier?</h3>
                 </div>                
             </li>
             <li class="pane pane7">
                 <div class="data-square">
-                    <h1 class="top-header">Bouncy is ready to<br />play every hour.</h1>
+                    <h1 class="top-header">Bouncy is ready to play every hour.</h1>
                     <h1 class="bottom-header">He wants to play now.</h1>
                     <h3>LIKE RIGHT NOW.</h3>
                 </div>                
