--- a/stats.html
+++ b/stats.html
@@ -410,7 +410,7 @@ font-size: 10px;
     for (var i = 0; i < timings.length; i++) {
         var temp = [];
         temp.push(timings[i]);
-        temp.push(moods[i]);
+        temp.push(8-moods[i]); // the mood index in lua has more positive mood as lower number. hence subtracted from 9 here to make the index correct
         scatterData.push(temp);
      }
 
