--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ img, audio, video, canvas { max-width: 100%; }
         }
 
         .pane h1 {
-            font-size: 7vw;
+            font-size: 5vw;
+            font-size: 16px;
             padding-bottom: 7%;
             margin: 20px 0px;
             font-weight: 700;
@@ -126,12 +127,14 @@ img, audio, video, canvas { max-width: 100%; }
         }
         .pane h3 {
             font-size: 4vw;
+            font-size: 12px;
                 position: absolute;
                 text-align: center;
             width: 100%;
             bottom: 1%;
             color: #CACACA;
             line-height: 6vw;
+            line-height: 16px;
             font-family: "Montserrat-Regular";
 
         }
@@ -156,7 +159,7 @@ img, audio, video, canvas { max-width: 100%; }
 }
 
 .bottom-header {
-    bottom: 5%;
+    bottom: 7%;
 
 }
 
@@ -576,47 +579,47 @@ left: 10%;
                     <h1 class="bottom-header">Bouncy likes to play.</h1>
                 </div>
             </li>
-            <li class="pane pane2">
-                <div class="data-square">
-                    <h1 class="top-header">When Bouncy turns green,</h1>
-                    <h1 class="bottom-header">click him as<br />fast as you can.</h1>
-                    <h3>Bouncy don't like waiting.</h3>
-                </div>                
-
-            </li>
             <li class="pane pane3">
                 <div class="data-square">
-                    <h1 class="top-header">If you hit Bouncy before he's green,</h1>
-                    <h1 class="bottom-header">he gets all red and cranky.</h1>
-                    <h3>So don't do that.</h3>
-                </div>                
-            </li>
-            <li class="pane pane4">
-                <div class="data-square">
-                    <h1 class="top-header">Bouncy is smarter with Jawbone's UP.</h1>
-                    <div class="ball-partner" id="up-band"><img src="up-band.png" /></div>
-                    <h1 class="bottom-header">He knows sleep affects your mental acuity.</h1>
-                    <h3>Get it? Acute ball? Acuity? Ha.</h3>
+                    <h1 class="top-header">Tap Bouncy as<br />fast as you can.</h1>
+                    <h1 class="bottom-header">Only when he's<br />green though!</h1>
+                    <h3>Otherwise he freaks out.</h3>
                 </div>                
             </li>
             <li class="pane pane5">
                 <div class="data-square">
-                    <h1 class="top-header">Tell Bouncy how you feel before you play.</h1>
+                    <h1 class="top-header">Tell Bouncy how you<br />feel before you play.</h1>
                     <!--<h1 class="bottom-header">Bouncy is a<br />good listener.</h1>-->
-                    <h3>Don't get too personal though. Bouncy doesn't care that much.</h3>
+                    <h3>Don't get too personal.<br />Bouncy doesn't care that much.</h3>
+                </div>                
+            </li>            
+            <li class="pane pane2">
+                <div class="data-square">
+                    <h1 class="top-header">Bouncy can<br />figure out if</h1>
+                    <h1 class="bottom-header">you're faster<br />when you're happier.</h1>
+                    <h3>Grumpy cat would approve.</h3>
+                </div>                
+
+            </li>            
+            <li class="pane pane4">
+                <div class="data-square">
+                    <h1 class="top-header">Bouncy is smarter<br />with Jawbone's UP.</h1>
+                    <div class="ball-partner" id="up-band"><img src="up-band.png" /></div>
+                    <h1 class="bottom-header">He knows sleep<br/>affects mental acuity.</h1>
+                    <h3>Get it? Acute ball? Acuity? Ha.</h3>
                 </div>                
             </li>
             <li class="pane pane6">
                 <div class="data-square">
-                    <h1 class="top-header">Were you on the ball today?</h1>
+                    <h1 class="top-header">Were you<br />on the ball today?</h1>
 <!--                     <h1 class="bottom-header">Bouncy tells you.</h1>
- -->                    <h3>How'd you do against other people? Against yourself when you were happier?</h3>
+ -->                    <h3>How'd you do against other<br />people? Against yourself?</h3>
                 </div>                
             </li>
             <li class="pane pane7">
                 <div class="data-square">
-                    <h1 class="top-header">Bouncy is ready to play every hour.</h1>
-                    <h1 class="bottom-header">He wants to play now.</h1>
+                    <h1 class="top-header">Bouncy is ready to<br />play every hour.</h1>
+                    <h1 class="bottom-header">He wants to play.</h1>
                     <h3>LIKE RIGHT NOW.</h3>
                 </div>                
             </li>
@@ -740,31 +743,30 @@ function slideAnimationRelative(offset) {
                 break;
 
               case 1:
-                $("#ball").css("background-image", "url(greenBouncy.png)");
+                $("#ball").css("background-image", "url(greenBouncy.png)");              
                 break;
 
               case 2:
                 $("#ball").css("background-image", "url(redBouncy.png)");
-                $("#ball").show();
                 break;
 
               case 3:
-                //$("#ball").css("background-image", "url(orangeBouncy.png)");
-                $("#ball").hide();
+                $("#ball").css("background-image", "url(orangeBouncy.png)");
+                $("#ball").show();
                 //slideAnimationRelative(-100);
-
                 break;
 
               case 4:
-                $("#ball").css("background-image", "url(blueBouncy.png)");
+                //$("#ball").css("background-image", "url(blueBouncy.png)");
                 //slideAnimationRelative(100);
-                $("#ball").show();
+                $("#ball").hide();
 
 
                 break;
 
               case 5:
-                $("#ball").css("background-image", "url(orangeBouncy.png)");
+                $("#ball").css("background-image", "url(blueBouncy.png)");
+                $("#ball").show();                
                 break;
 
               case 6:
